# AudioLab

./: AudioLab.jucer  CMakeLists.txt  README.md
Builds/Android/: local.properties  settings.gradle
Builds/Android/app/: CMakeLists.txt  build.gradle
Builds/Android/app/src/debug/res/values/: string.xml
Builds/MacOSX/: Info-AU.plist  Info-App.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/AccessibilityDemo.xcodeproj/: project.pbxproj
Builds/MacOSX/AccessibilityDemo.xcodeproj/project.xcworkspace/xcuserdata/ernestforzano.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/AccessibilityDemo.xcodeproj/xcuserdata/ernestforzano.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Builds/MacOSX/AccessibilityDemo.xcodeproj/xcuserdata/ernestforzano.xcuserdatad/xcschemes/: xcschememanagement.plist
Builds/MacOSX/AudioLab.xcodeproj/: project.pbxproj
Builds/MacOSX/AudioLab.xcodeproj/project.xcworkspace/xcuserdata/ernestforzano.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/AudioLab.xcodeproj/xcuserdata/ernestforzano.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Builds/MacOSX/AudioLab.xcodeproj/xcuserdata/ernestforzano.xcuserdatad/xcschemes/: xcschememanagement.plist
Builds/VisualStudio2022/: AccessibilityDemo.sln  AccessibilityDemo_App.vcxproj  AccessibilityDemo_App.vcxproj.filters  AudioLab.sln  AudioLab_App.vcxproj  AudioLab_App.vcxproj.filters  AudioLab_SharedCode.vcxproj  AudioLab_SharedCode.vcxproj.filters  AudioLab_StandalonePlugin.vcxproj  AudioLab_VST3.vcxproj  AudioLab_VST3ManifestHelper.vcxproj
Builds/VisualStudio2026/: AccessibilityDemo.sln  AccessibilityDemo_App.vcxproj  AccessibilityDemo_App.vcxproj.filters  AudioLab.sln  AudioLab_App.vcxproj  AudioLab_App.vcxproj.filters  AudioLab_SharedCode.vcxproj  AudioLab_SharedCode.vcxproj.filters  AudioLab_StandalonePlugin.vcxproj  AudioLab_VST3.vcxproj  AudioLab_VST3ManifestHelper.vcxproj  resources.rc
Builds/iOS/: Info-App.plist
Builds/iOS/AccessibilityDemo.xcodeproj/: project.pbxproj
Builds/iOS/AudioLab.xcodeproj/: project.pbxproj
JuceLibraryCode/: JuceHeader.h
Source/: AudioDeviceManager.h  AudioLab.h  AudioPlayer.h  DSPDemos_Common.h  Effect.h  EffectAnalyzer.h  Main.cpp  Oscillator.h
